...
    android:id="@+id/frame_layout_filtering"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.fragments.FilteringFragment">

    <Spinner
        android:id="@+id/FiltreDateSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:textAlignment="center"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        android:labelFor="@id/FiltreDateSpinner" />

    <MultiAutoCompleteTextView
        android:id="@+id/FiltreSalles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="80dp"
        android:drawableStart="@drawable/ic_baseline_meeting_room_24"
        android:drawablePadding="10dp"
...
