<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_layout_add_meeting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".controller.fragments.AddMeetingFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SujetBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Sujet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Sujet de la réunion" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/DateHeureDebut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:inputType="datetime"
            android:hint="Heure de début"
            android:backgroundTint="@color/purple_200"
            android:drawablePadding="10dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:drawableStart="@drawable/ic_baseline_access_time_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SujetBox"
            app:layout_constraintBottom_toTopOf="@id/DateHeureFin" />

        <EditText
            android:id="@+id/DateHeureFin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:inputType="datetime"
            android:hint="Heure de fin"
            android:backgroundTint="@color/purple_200"
            android:drawablePadding="10dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:drawableStart="@drawable/ic_baseline_access_time_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/DateHeureDebut"
            app:layout_constraintBottom_toTopOf="@id/frame_salle" />

        <LinearLayout
            android:id="@+id/frame_salle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DateHeureFin"
            app:layout_constraintBottom_toTopOf="@id/multiAutoCompleteParticipants">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Choisir la salle"
                android:layout_weight="5"
                android:backgroundTint="@color/purple_200"
                android:drawableStart="@drawable/ic_baseline_meeting_room_24"
                android:drawablePadding="10dp"
                android:gravity="bottom" />

            <ImageView
                android:id="@+id/Couleur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintBottom_toTopOf="@id/multiAutoCompleteParticipants"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/autoCompleteRoom"
                app:layout_constraintTop_toBottomOf="@id/DateHeureFin" />

        </LinearLayout>

        <MultiAutoCompleteTextView
            android:id="@+id/multiAutoCompleteParticipants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Choisir les participants"
            android:backgroundTint="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_salle"
            android:maxLines="2"
            android:layout_margin="20dp"
            android:drawableStart="@drawable/ic_baseline_people_24"
            android:drawablePadding="10dp"
            android:gravity="bottom" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteOrganisateur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="Choisir l'organisateur"
            android:backgroundTint="@color/purple_200"
            android:gravity="bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/multiAutoCompleteParticipants"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            />

        <View
            android:id="@+id/addMeeting_border"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/flavor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>