<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group1">
    <item
        android:title="Spacer|"
        android:icon="@drawable/ic_baseline_border_vertical_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/filter_action_close"
        android:icon="@drawable/ic_baseline_close_24"
        android:title="@string/action_close"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/filter_action_check"
        android:icon="@drawable/ic_baseline_check_24"
        android:title="@string/action_check"
        app:showAsAction="ifRoom" />

    </group>
</menu>